--- a/docker/model_training/Dockerfile
+++ b/docker/model_training/Dockerfile
@@ -1,8 +1,8 @@
 # Use the official Python base image
-FROM python:3.11
+FROM python:3.9-slim
 
 # Set the working directory in the container
-WORKDIR /mlflow
+WORKDIR /model_training
 
 # Copy the requirements file into the container
 COPY requirements.txt .
@@ -10,3 +10,8 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the remaining contents into the container
+COPY . .
+
+# Set the default command to run the model training script
+CMD ["python", "model_training.py"]
